<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audio GPS Network Status</string>
    <string name="action_settings">Settings</string>   
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_play">Listen</string>
    <string name="label_record">Record</string>
    <string name="label_stop">Stop</string>
	<string name="label_location">LOCATION</string>
	<string name="label_networkstatus">NETWORK STATUS</string>
	<string name="location">coords</string>
	<string name="networkstatus">status here</string>
    <string name="title_activity_add_audio">Add Audio Recording</string>
    <string name="arcadia">Arcadia.mp3</string>
    
</resources>