<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
 	<TextView
        android:id="@+id/label_networkstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/location"
        android:text="@string/label_networkstatus" />

 	<TextView
 	    android:id="@+id/label_location"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentTop="true"
 	    android:layout_alignRight="@+id/recordButton"
 	    android:layout_marginTop="159dp"
 	    android:text="@string/label_location" />

 	<TextView
 	    android:id="@+id/networkstatus"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/recordButton"
 	    android:layout_below="@+id/label_networkstatus"
 	    android:text="@string/networkstatus" />

 	<TextView
 	    android:id="@+id/location"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/label_location"
 	    android:layout_centerHorizontal="true"
 	    android:text="@string/location" />
 	
 	<Button
 	    android:id="@+id/recordButton"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentBottom="true"
 	    android:layout_centerHorizontal="true"
 	    android:text="@string/label_record" />

 	<Button
 	    android:id="@+id/playButton"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignBaseline="@+id/recordButton"
 	    android:layout_alignBottom="@+id/recordButton"
 	    android:layout_toRightOf="@+id/label_networkstatus"
 	    android:text="@string/label_play" />

</RelativeLayout>